# MangaNinjia-training

./: .gitignore  README.md  download.py  pyproject.toml
scripts/: infer.sh
