[project]
name = "manganinja-training"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "sky24h", email = "hytian2@gmail.com" },
]
requires-python = ">=3.10,<3.13"

dependencies = [
  "setuptools>=67.1.0",
  "numpy>=1.23.5",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "transformers==4.44.1",
  "torchmetrics>=1.4.1",
  "accelerate>=0.31.0",
  "diffusers==0.27.2",
  "huggingface-hub==0.25.2",
  "gradio>=3.39.0",
  "gradio-client>=1.3.0",
  "h5py>=3.11.0",
  "imageio>=2.35.1",
  "imageio-ffmpeg>=0.5.1",
  "importlib-metadata>=8.4.0",
  "importlib-resources>=6.4.5",
  "ipdb>=0.13.13",
  "ipython>=8.26.0",
  "ipywidgets>=8.1.5",
  "kornia>=0.7.3",
  "kornia-rs>=0.1.5",
  "omegaconf>=2.3.0",
  "opencv-python>=4.10.0.84",
  "pandas>=2.2.2",
  "pillow>=10.4.0",
  "scikit-image>=0.24.0",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "tqdm>=4.66.5",
  "einops>=0.8.0",
  "matplotlib>=3.10.1",
  "basicsr==1.3.5",
  "peft>=0.15.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
# Ruff only supports pyproject.toml, not setup.cfg.
# Implicit configurations as default: https://docs.astral.sh/ruff/configuration/
lint.select = [
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
# Allow automatic fixes for all fixable issues
lint.fixable = ["ALL"]
# Same as MacBookPro (15inch) and IDEs, 1920px full width.
line-length = 144

[tool.mypy]
# ref: https://mypy.readthedocs.io/en/stable/config_file.html
exclude = ["setup.py"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
# message format
show_column_numbers = true
show_error_code_links = true
pretty = true

[tool.hatch.build.targets.wheel]
packages = ["src/skit"]
